feat: auth done
